Fixed text overflow on navbar

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
 }
 
 .navbar-nav .nav-link {
-    font-size: 1.2vw !important;
+    font-size: 1.1vw !important;
     color: black !important;
     font-weight: 300 !important;
 }
